force-app/main/default/objects/Recipe__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot_Beverage</fullName>
                <label>Hot Beverage</label>
            </value>
            <value>
                <fullName>Cold_Beverage</fullName>
                <label>Cold Beverage</label>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>