force-app/main/default/objects/Recipe__c/fields/Preparation_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Preparation_Time_Minutes__c</fullName>
    <label>Preparation Time Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>