force-app/main/default/objects/Recipe__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <label>Total Cost</label>
    <summarizedField>Recipe_Item__c.Cost__c</summarizedField>
    <summaryForeignKey>Recipe_Item__c.Recipe__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>