force-app/main/default/objects/Recipe__c/fields/Yield_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Yield_Quantity__c</fullName>
    <label>Yield Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>